--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,29 @@
-<h1>
-  {{title}}
-</h1>
+<main>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container-float">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><div id="navTitle">{{title}}</div></li>
+                        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+                        <li><a routerLink="/movies" routerLinkActive="active">Movies</a></li>
+                        <li><a routerLink="/series" routerLinkActive="active">TV Series</a></li>
+                    </ul>
+                </div>          
+        </nav>
+        
+        <div>
+          <router-outlet></router-outlet>
+        </div>
+      
+  
+</main>
