--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -8,6 +8,7 @@
           <input type="text" name="search" placeholder="Search..">
         </form>
       </div>
+      <div class="col-sm-12"></div>
     </div>
 </div>
 
