--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -31,3 +31,51 @@ input[type=text]:focus
 {
     width: 50%;
 }
+
+button
+{
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 2px solid #c8c8c8;
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: 'Ubuntu', sans-serif;
+    color:white;
+    background-color: #697075;
+}
+
+.container-float
+{
+    padding-left: 15px;
+    text-align: center;
+}
+
+#searchResult
+{
+    
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 513px;
+}
+
+@media only screen and (max-width : 1199px)
+{
+    #searchResult
+    {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        height: 287px;
+    }
+}
+
+@media only screen and (max-width : 767px)
+{
+    #searchResult
+    {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        height: 513px;
+    }
+
+}
