--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -45,19 +45,24 @@ button
     background-color: #697075;
 }
 
-.container-float
+#containerTop
 {
     padding-left: 15px;
     text-align: center;
 }
 
+#containerBottom
+{
+    padding-left: 15px;
+}
+
 #searchResult
 {
-    
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 5px 0px 5px 0px;
+    /*width: 342px;*/
     height: 513px;
 }
+
 
 @media only screen and (max-width : 1199px)
 {
@@ -65,6 +70,7 @@ button
     {
         margin-top: 5px;
         margin-bottom: 5px;
+        /*width: 185px;*/
         height: 287px;
     }
 }
@@ -75,6 +81,7 @@ button
     {
         margin-top: 5px;
         margin-bottom: 5px;
+        /*width: 342px;*/
         height: 513px;
     }
 
