--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -13,18 +13,13 @@
 </div>
 <div class="container-float" id="containerBottom">
     <div class="row">
-        <div class="col-sm-3" id="searchResult" *ngFor="let movie of movies" (click)="onSelect(movie)" >
+        <div class="col-sm-3" id="searchResult" *ngFor="let movie of movies" (click)="onSelect(movie)">
             <img class="visible-xs hidden-sm hidden-md visible-lg" src="https://image.tmdb.org/t/p/w342/{{movie.poster_path}}">
             <img class="hidden-xs visible-sm  visible-md hidden-lg" src="https://image.tmdb.org/t/p/w185/{{movie.poster_path}}">
 
-            <!--<div *ngIf="selectedMovie === movie">
-              <p>{{movie.title}}</p>
-              <p>{{movie.release_date}}</p>
-            </div>
-            chiled routing: https://angular-2-training-book.rangle.io/handout/routing/child_routes.html
+            <!--chiled routing: https://angular-2-training-book.rangle.io/handout/routing/child_routes.html-->
+            <!--<app-movie-details [movieSelected]='selectedMovie'></app-movie-details>-->
 
-            -->
-            
         </div>
         
     </div>
