Der kan søges i film og serier og hentes information frem om dem, yderligerer kan man klikke direkte ind og se info omkring populærer film og serier.

--- a/src/app/movies/movies.component.css
+++ b/src/app/movies/movies.component.css
@@ -10,6 +10,11 @@
     padding-left: 15px;
 }
 
+img:hover
+{
+    cursor: pointer;
+}
+
 @media only screen and (max-width : 1199px)
 {
     #poster
