--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
                 </div>          
         </nav>
         
-        <div>
+        <div id="routerDiv">
           <router-outlet></router-outlet>
         </div>
       
