--- a/src/app/movie/movie-details/movie-details.component.html
+++ b/src/app/movie/movie-details/movie-details.component.html
@@ -1,17 +1,18 @@
-<img id="backgroundImage" src="https://image.tmdb.org/t/p/original/{{movie?.backdrop_path}}">
+<header id="headerImage">
+    <img  src="https://image.tmdb.org/t/p/original/{{movie?.backdrop_path}}">
+</header>
 
-<div class="container-float" id="movieInfoContainer" *ngIf="movie?.title">
-    <div id="row" class="row">
+<div class="container" id="movieInfoContainer" *ngIf="movie?.title">
+    <div class="row">
         <div class="col-sm-12" >
-            <h2 id="headline">{{headline}}</h2>
+            <h2 id="headline">{{movie?.title}}</h2>
             <h4 id="tagline">{{movie?.tagline}}</h4>
             <h4 id="release">Release date: {{movie?.release_date}}</h4> 
         </div>
-        <div class="col-sm-5" id="image">
-          <img class="visible-xs visible-sm visible-md visible-lg" src="https://image.tmdb.org/t/p/w342/{{movie?.poster_path}}">
-          <img class="hidden-xs hidden-sm  hidden-md hidden-lg" src="https://image.tmdb.org/t/p/w185/{{movie?.poster_path}}">
+        <div class="col-sm-4" id="image">
+          <img class="hidden-xs" src="https://image.tmdb.org/t/p/w342/{{movie?.poster_path}}">
         </div>
-        <div class="col-sm-7" id="overview">
+        <div class="col-sm-4" id="overview">
             <h5>Overview:</h5>
             <p>{{movie?.overview}}</p>
             <h5>Genre:</h5>
@@ -23,9 +24,16 @@
             <h5>Homepage:</h5>
             <a href="{{movie?.homepage}}">{{movie?.homepage}}</a>
         </div>
+        <div class="col-sm-4"  id="similarMovies">
+            <h5 (click)="back()">{{headline}}</h5>
+            <h6>Similar Movies:</h6>
+            <div *ngFor="let movies of similarMovies" (click)="onSelect(movies)">
+                <a>{{movies.title}}</a>
+            </div>
+            
+        </div>
         <div class="col-sm-12">
           <button id="backbutton" (click)="goBackToMovies()">Go Back</button>
         </div>
-        
     </div>
 </div>
