--- a/src/app/series/series.component.css
+++ b/src/app/series/series.component.css
@@ -11,6 +11,11 @@
     padding-left: 15px;
 }
 
+img:hover
+{
+    cursor: pointer;
+}
+
 @media only screen and (max-width : 1199px)
 {
     #poster
