--- a/src/app/tv-series/tv-series.component.html
+++ b/src/app/tv-series/tv-series.component.html
@@ -9,7 +9,7 @@
           <button (click)="search(searchTherm.value)">Go</button>
         </form>
       </div>
-      <div *ngFor="let serie of series" class="col-sm-3" id="searchResult">
+      <div *ngFor="let serie of series" class="col-sm-3" id="searchResult" (click)="onSelect(serie)">
           <img class="visible-xs hidden-sm hidden-md visible-lg" src="https://image.tmdb.org/t/p/w342/{{serie.poster_path}}">
           <img class="hidden-xs visible-sm  visible-md hidden-lg" src="https://image.tmdb.org/t/p/w185/{{serie.poster_path}}">
       </div>
