--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><div id="navTitle">{{title}}</div></li>
-                        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+                        <li><a routerLink="/home" routerLinkActive="active">Home!</a></li>
                         <li><a routerLink="/movies" routerLinkActive="active">Movies</a></li>
                         <li><a routerLink="/series" routerLinkActive="active">TV Series</a></li>
                     </ul>
